# znoyder

./: .gitignore  .gitreview  .yamllint  .zuul.yaml  README.md  groups  project.config  requirements.txt  run.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: main.yml
playbooks/: unittests.yaml
shperer/: cli.py
shperer/lib/: exceptions.py  logger.py  util.py  zuul.py
tests/: __init__.py  test_browser.py  test_finder.py  test_generator.py  test_mapper.py
tools/: generate-components-projects-dict.sh
znoyder/: browser.py  cli.py  component.py  config.py  config.yml  distro.py  distroinfo.py  downloader.py  exclude_map.py  finder.py  generator.py  get_project_zuul_files.py  include_map.py  mapper.py  package.py  templater.py  utils.py  znoyder.py
znoyder/config.d/: 01-branches.yml  02-extra-projects.yml  11-include.yml  21-exclude.yml  31-add-OSP-16.yml  32-add-OSP-17.yml  33-add-OSP-18.yml  41-override-OSP-16.yml  42-override-OSP-17.yml  43-override-OSP-18.yml  51-copy.yml
znoyder/lib/: cache.py  exceptions.py  logger.py  utils.py  yaml.py  zuul.py
znoyder/templates/: empty-zuul-project.j2  project-config.j2  zuul-job.j2  zuul-project-template.j2  zuul-project.j2  zuul-projects-config.j2  zuul-resources.j2
znoyder/tests/: doctests.py  test_browser.py  test_cache.py  test_cli.py  test_downloader.py  test_finder.py  test_generator.py  test_mapper.py  test_templater.py  test_utils.py
zuuler/: descarger.py  fertiger.py  ryhter.py  shperer.py  znoyder.py
zuuler/lib/: exceptions.py  logger.py  utils.py  zuul.py
