[metadata]
name = zuuler
description_file = README.md
home_page = https://github.com/rhos-infra/zuuler
author = Red Hat Code Reliability Engineering Team
author_email = rhos-cre@redhat.com
maintainer = Red Hat Code Reliability Engineering Team
maintainer_email = rhos-cre@redhat.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    zuuler

[entry_points]
console_scripts =
    descarger = zuuler.descarger:main
    fertiger = zuuler.fertiger:main
    ryhter = zuuler.ryhter:main
    shperer = zuuler.shperer:main
    znoyder = zuuler.znoyder:main

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[pbr]
warnerrors = true
