[metadata]
name = znoyder
description_file = README.md
home_page = https://github.com/RedHatCRE/znoyder
author = Red Hat Code Reliability Engineering Team
author_email = rhos-dfg-cre@redhat.com
maintainer = Red Hat CI OPS Team
maintainer_email = rhos-dfg-ciops@redhat.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    znoyder

[entry_points]
console_scripts =
    znoyder = znoyder.cli:main

[package_data]
znoyder =
    znoyder/config.yml
    znoyder/config.d/*.yml
    znoyder/templates/*

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[pbr]
warnerrors = true
